[package]
authors = ["Joseph Lai <joseph.lai241@protonmail.com>"]
categories = ["tree", "directory-traversal", "command-line-tool"]
description = "The next gen tree command"
edition = "2021"
homepage = "https://github.com/JosephLai241/nomad"
keywords = ["tree", "directory traversal", "command-line tool"]
license = "MIT"
name = "nomad"
readme = "README.md"
repository = "https://github.com/JosephLai241/nomad"
version = "1.0.0"

[[bin]]
name = "nd"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.53"
bat = "0.18.3"
chrono = "0.4.19"
git2 = "0.13.25"
ignore = "0.4.18"
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
ptree = "0.4.0"
rand = "0.8.5"
regex = "1.5.4"
self_update = "0.28.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
term-table = "1.3.2"
thiserror = "1.0.30"
unix_mode = "0.1.3"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.2"

