[package]
authors = ["Joseph Lai <joseph.lai241@protonmail.com>"]
categories = ["command-line-utilities", "development-tools", "filesystem", "visualization"]
description = "The customizable next gen tree command with Git integration and TUI"
edition = "2021"
homepage = "https://github.com/JosephLai241/nomad"
keywords = ["command-line-tool", "developer-tool", "git", "regex", "tree"]
license = "MIT"
name = "nomad"
readme = "README.md"
repository = "https://github.com/JosephLai241/nomad"
version = "1.0.0"

[[bin]]
name = "nd"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.53"
bat = "0.18.3"
chrono = "0.4.19"
crossterm = "0.23.0"
directories = "4.0.1"
git2 = "0.13.25"
ignore = "0.4.18"
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
ptree = "0.4.0"
rand = "0.8.5"
regex = "1.5.4"
self_update = "0.28.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
syntect = "4.6.0"
term-table = "1.3.2"
thiserror = "1.0.30"
tokei = "12.1.2"
toml = "0.5.8"
tui = { version = "0.17.0", default-features = false, features = ["crossterm"] }
unix_mode = "0.1.3"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.2"

